--- a/manifest.json
+++ b/manifest.json
@@ -1,54 +1,69 @@
 {
-    "format_version": 2,
-    "header": {
-        "description": "§l§4Odin Anti Cheat, join discord.gg/YBHBn7UEtT",
-        "min_engine_version": [1, 17, 0],
-        "name": "§cOAC",
-        "uuid": "f9f8e6de-2916-4b0f-b884-12dde2d5490c",
-        "version": [2, 0, 0]
+  "format_version": 2,
+  "header": {
+    "name": "§cOAC",
+    "description": "§l§4Odin Anti Cheat, join discord.gg/YBHBn7UEtT",
+    "uuid": "f9f8e6de-2916-4b0f-b884-12dde2d5490c",
+    "min_engine_version": [
+      1,
+      17,
+      0
+    ],
+    "version": [
+      2,
+      0,
+      0
+    ]
+  },
+  "modules": [
+    {
+      "type": "data",
+      "uuid": "8caeb387-0e53-4d24-8061-d0adf8f38e6f",
+      "version": [
+        2,
+        0,
+        0
+      ]
     },
-    "modules": [
-        {
-            "description": "Data Module",
-            "type": "data",
-            "uuid": "8caeb387-0e53-4d24-8061-d0adf8f38e6f",
-            "version": [2, 0, 0]
-        },
-        {
-            "type": "script",
-            "language":"javascript",
-            "uuid": "aeb03028-547f-4c61-aaff-f11e183c602a",
-            "version": [
-              1,
-              0,
-              0
-            ],
-            "entry": "scripts/index.js"
-          }
-    ],
-    "dependencies": [
-        {
-          "uuid": "b26a4d4c-afdf-4690-88f8-931846312678",
-          "version": [0, 1, 0]
-        },
-        {
-          "uuid": "6f4b6893-1bb6-42fd-b458-7fa3d0c89616",
-          "version": [0, 1, 0]
-        },
-        {
-            "uuid": "b26a4d4c-afdf-4690-88f8-931846312678",
-            "version": [0, 1, 0]
-          },
-          {
-            "uuid": "6f4b6893-1bb6-42fd-b458-7fa3d0c89616",
-            "version": [0, 1, 0]
-          },
-          {
-              "uuid": "2bd50a27-ab5f-4f40-a596-3641627c635e",
-              "version": [0, 1, 0]
-          }
-    ],
-    "metadata":{
-        "authors": ["L0VE MC","Odin Network"]
+    {
+      "type": "script",
+      "language": "javascript",
+      "uuid": "aeb03028-547f-4c61-aaff-f11e183c602a",
+      "version": [
+        1,
+        0,
+        0
+      ],
+      "entry": "scripts/index.js"
     }
+  ],
+  "dependencies": [
+    {
+      "uuid": "b26a4d4c-afdf-4690-88f8-931846312678",
+      "version": "1.0.0-beta"
+    },
+    {
+      "uuid": "6f4b6893-1bb6-42fd-b458-7fa3d0c89616",
+      "version": "1.0.0-beta"
+    },
+    {
+      "uuid": "b26a4d4c-afdf-4690-88f8-931846312678",
+      "version": "1.0.0-beta"
+    },
+    {
+      "uuid": "6f4b6893-1bb6-42fd-b458-7fa3d0c89616",
+      "version": "1.0.0-beta"
+    },
+    {
+      "uuid": "2bd50a27-ab5f-4f40-a596-3641627c635e",
+      "version": "1.0.0-beta"
+    }
+  ],
+  "metadata": {
+    "authors": [
+      "L0VE MC",
+      "iBlqzed",
+      "Dooka"
+    ]
+  }
 }
