--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "format_version": 2,
   "header": {
-    "name": "§cOAC",
-    "description": "§l§4Odin Anti Cheat, join discord.gg/YBHBn7UEtT",
+    "name": "§bOAC §3(Odin Anti Cheat)",
+    "description": "§l§bjoin discord.gg/YBHBn7UEtT for help.",
     "uuid": "f9f8e6de-2916-4b0f-b884-12dde2d5490c",
     "min_engine_version": [
       1,
