--- a/.mcattributes
+++ b/.mcattributes
@@ -1,2 +1,2 @@
-diagnostic.disable.minecraft.tag.missing=true
+diagnostic.disable.behaviorpack.anim_or_controller.missing=true
 diagnostic.disable.minecraft.tag.missing=true
